@@ -1,3 +1,7 @@
+2003-05-03  Chris Demetriou  <cgd@broadcom.com>
+
+	* compare_igen_models: Tweak attribution slightly.
+
 2002-11-22  Andrew Cagney  <cagney@redhat.com>
 
 	* gen.c (name_cmp): Rename format_name_cmp.
